// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayLink renders 1`] = `
<a
  className=""
/>
`;

exports[`ClayLink renders borderless links 1`] = `
<a
  className="link-outline-borderless"
  href="#1"
>
  Borderless
</a>
`;

exports[`ClayLink renders outline links 1`] = `
<a
  className="link-outline link-outline-primary"
  href="#1"
>
  Outline
</a>
`;

exports[`ClayLink renders with a children content 1`] = `
<a
  className=""
>
  My Link
</a>
`;

exports[`ClayLink renders with a display type 1`] = `
<a
  className="link-secondary"
/>
`;

exports[`ClayLink renders with href 1`] = `
<a
  className=""
  href="#links"
/>
`;

exports[`ClayLink renders with monospaced 1`] = `
<a
  className="link-monospaced link-outline link-outline-borderless link-outline-primary"
  href="#1"
>
  M
</a>
`;

exports[`ClayLink uses custom link component via context 1`] = `
<a
  className="link-secondary"
  href="#1"
>
  <strong>
    I am Bold!
  </strong>
</a>
`;
